# kASA

./: .gitignore  CMakeLists.txt  COMING SOON.md  README.md  parameters.json  parameters.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
binaries/: kASA_OSX  kASA_linux  kASA_macOS
example/: snake_config.json  snakefile  snakefile.smk
example/taxonomy/: names.dmp  nodes.dmp
example/taxonomy/acc2tax/: acc2Tax.txt
example/work/: exampleInput.fasta  table.prt
example/work/db/: ProtVulg_protein.fasta
example/work/input/: exampleInput.fasta  exampleProtein.fasta
example/work/results/: dummyFile.txt
scripts/: camiToKrona.py  csvToCAMI.py  downloadGenomesFromContent.py  freqsToCAMI.py  generateCF.py  getNotIdentified.py  getNotIdentifiedJsonL.py  getReadsForTaxonFromJsonl.py  jsonLToFrequencies.py  jsonLToFrequenciesTopOnly.py  jsonToCAMIBin.py  jsonToFrequencies.py  jsonToFrequenciesTopOnly.py  jsonToJsonL.py  reconstructDNA.py  sumFreqsOnTaxLvl.py  tsvToFrequencies.py
slnForVS/: kASA.sln
slnForVS/kASA/: kASA.vcxproj  kASA.vcxproj.filters
slnForVS/zlibLibs/Debug/: zlibstat.lib
slnForVS/zlibLibs/Release/: zlibstat.lib  zlibwapi.lib
source/: Build.hpp  Compare.hpp  MetaHeader.h  Read.hpp  Shrink.hpp  ThreadPool.h  Trie.hpp  Update.hpp  Utilities.hpp  WorkerThread.hpp  kASA.hpp  main.cpp
source/modes/: Build.hpp  Compare.hpp  GenerateContentFile.hpp  Read.hpp  Shrink.hpp  Trie.hpp  Update.hpp
source/utils/: BitArray.hpp  ParallelQuicksort.hpp  Utilities.hpp  WorkerThread.hpp  dToStr.h  iToStr.hpp  packedPairs.hpp  uint128_t.hpp
stxxl/: CMakeLists.txt
stxxl/build_vs/Release/: stxxl.lib
stxxl/build_vs/include/stxxl/bits/: config.h
stxxl/include/stxxl/bits/: config.h.in  msvc_compatibility.h  parallel.h  verbose.h
stxxl/include/stxxl/bits/algo/: inmemsort.h  ksort.h  random_shuffle.h  sort.h  sort_helper.h
stxxl/include/stxxl/bits/common/: error_handling.h  mutex.h  rand.h
stxxl/include/stxxl/bits/compat/: unique_ptr.h
stxxl/include/stxxl/bits/containers/: vector.h
stxxl/include/stxxl/bits/containers/btree/: leaf.h  node.h
stxxl/include/stxxl/bits/mng/: adaptor.h  block_alloc.h  block_alloc_interleaved.h  block_manager.h  disk_allocator.h
stxxl/lib/common/: verbose.cpp
stxxl/lib/io/: request_queue_impl_1q.cpp  request_queue_impl_qwqr.cpp  request_with_waiters.cpp  wbtl_file.cpp
stxxl/lib/mng/: config.cpp
stxxl/local/: CMakeLists.txt
stxxl/tools/: create_files.cpp
zlib/: gzstream.cpp
zlib/contrib/masmx64/: gvmat64.lst  inffasx64.lst
zlib/contrib/masmx86/: inffas32.lst  match686.lst
